# UltrasoundTrainingSystem

./: CMakeLists.txt  I18nGuideletLoadable.py  README.md  SimulatorGuidelet.py  SimulatorGuideletLoadable.py  Translator.py  UltraSound.py  UltrasoundTrainingSystem.py  UsSimulatorTraining.py  __init__.py
I18nGuideletLib/: I18nGuidelet.py  Translator.py  __init__.py
I18nGuideletLib/Resources/locales/: base.pot
I18nGuideletLib/Resources/locales/ar/LC_MESSAGES/: base.mo  base.po
I18nGuideletLib/Resources/locales/es/LC_MESSAGES/: base.mo  base.po
I18nGuideletLib/Resources/locales/fr/LC_MESSAGES/: base.mo  base.po
I18nGuideletLib/locales/es/LC_MESSAGES/: base.po
I18nGuideletLib/locales/fr/LC_MESSAGES/: base.mo
locales/ar/LC_MESSAGES/: base.po
